--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "my-react-github",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://github.com/P15S18/reactjsapp",
+  "homepage": "https://P15S18.github.io/reactjsapp",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
